--- a/cssfiles/HomePage.css
+++ b/cssfiles/HomePage.css
@@ -3,10 +3,11 @@
 * {
   margin: 0;
   font-family: "Lato";
+  font-weight: bold;
 }
 
 body {
-  background: linear-gradient(rgb(192, 192, 192), rgb(253, 253, 253));
+  background: aliceblue;
 }
 
 header {
@@ -20,14 +21,16 @@ header {
 header > h1 {
   color: aliceblue;
   font-size: 25px;
+  text-align: center;
 }
 
 header > img {
-  height: 50%;
+  height: 40%;
   border-radius: 10px;
 }
 
-header > a > button {
+header > a > img {
+  height: 40px;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.5s ease;
@@ -39,14 +42,14 @@ header > a > button:hover {
 }
 
 .Intro {
-  background-color: #1e1e24ee;
+  background-color: #1e1e2400;
   margin: 30px 30px;
-  border-radius: 10px;
   padding: 20px;
-  color: aliceblue;
-  font-size: 15px;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
   text-align: center;
-  font-weight: bold;
+  border-top: black double;
+  border-bottom: black double;
 }
 
 .subsection {
@@ -55,7 +58,7 @@ header > a > button:hover {
   grid-template-columns: 2fr 1fr 2fr;
   margin: 0px 30px;
   margin-bottom: 50px;
-  background: #1e1e24ee;
+  background: #1e1e2400;
   border-radius: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -70,11 +73,10 @@ header > a > button:hover {
   background: url(/icons/ProjectIcon.png) no-repeat;
   background-size: 25%;
   background-position: center;
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .centre {
-  background-color: rgba(0, 0, 0, 0);
   display: flex;
 }
 
@@ -84,7 +86,7 @@ header > a > button:hover {
   background-size: 25%;
   background-position: center;
   transform: scaleX(-1);
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .leftskill {
@@ -92,7 +94,7 @@ header > a > button:hover {
   background: url(/icons/SkillsetIcon.png) no-repeat;
   background-size: 25%;
   background-position: center;
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .rightskill {
@@ -101,7 +103,7 @@ header > a > button:hover {
   background-size: 25%;
   background-position: center;
   transform: scaleX(-1);
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .leftcertification {
@@ -110,7 +112,7 @@ header > a > button:hover {
   background: url(/icons/CertificationIcon.png) no-repeat;
   background-size: 20%;
   background-position: center;
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .rightcertification {
@@ -120,47 +122,47 @@ header > a > button:hover {
   background-size: 20%;
   background-position: center;
   transform: scaleX(-1);
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .leftcontact {
   background-color: #1e1e24;
   border-radius: 20px;
   background: url(/icons/ContactIcon.png) no-repeat;
-  background-size: 20%;
+  background-size: 30%;
   background-position: center;
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .rightcontact {
   background-color: #1e1e24;
   border-radius: 20px;
   background: url(/icons/ContactIcon.png) no-repeat;
-  background-size: 20%;
+  background-size: 30%;
   background-position: center;
   transform: scaleX(-1);
-  filter: invert(60%);
+  filter: invert(10%);
 }
 
 .button {
   padding: 20px 40px;
-  border-radius: 20px;
   position: relative;
   margin: auto auto;
-  font-weight: 800;
-  font-size: 12px;
+  font-size: 15px;
   cursor: pointer;
-  border-width: 2px;
-  color: aliceblue;
-  border-color: #313a3f;
-  background: radial-gradient(#1e1e24, #1e1e24);
+  border-left: transparent;
+  border-right: transparent;
+  border-radius: 10px;
+  border-top: black double;
+  border-bottom: black double;
+  color: rgb(0, 0, 0);
   text-transform: capitalize;
   transition: 0.5s ease;
+  background-color: rgb(196, 206, 219);
 }
 
 button:hover {
-  background: rgba(88, 87, 87, 0.3);
-  color: aliceblue;
+  background: rgba(88, 87, 87, 0);
   border-color: aqua;
 }
 
@@ -172,14 +174,9 @@ button:hover {
 footer {
   height: 100px;
   background-color: #1e1e24;
-  position: relative;
   display: flex;
   align-items: center;
-}
-
-footer > a {
-  position: absolute;
-  left: 30px;
+  justify-content: space-evenly;
 }
 
 footer > a > button {
@@ -187,14 +184,12 @@ footer > a > button {
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0);
   color: aliceblue;
-  font-weight: bold;
   cursor: pointer;
   transition: 0.5s ease;
+  font-size: 15px;
 }
 
 footer > h1 {
   font-size: 15px;
-  position: absolute;
-  right: 30px;
   color: aliceblue;
 }
