--- a/cssfiles/Miotag.css
+++ b/cssfiles/Miotag.css
@@ -4,13 +4,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-weight: bold;
 }
 
 body {
-  background: linear-gradient(
-    rgba(110, 110, 110, 0.5),
-    rgba(192, 192, 192, 0.1)
-  );
+  background-color: aliceblue;
 }
 
 header {
@@ -25,6 +23,7 @@ header > h1 {
   color: aliceblue;
   font-family: "Lato";
   font-size: 25px;
+  text-align: center;
 }
 
 img {
@@ -53,25 +52,30 @@ header > a > button:hover {
 
 .section {
   min-height: 200px;
-  margin: 20px 20px;
-  background-color: #1e1e24ee;
+  margin: 20px 40px;
   border-radius: 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .section > img {
   padding: 10px;
-  height: 200px;
+  height: auto;
   border-radius: 20px;
+  width: 50%;
 }
 
 .section > p {
-  color: aliceblue;
-  padding: 20px 20px;
+  color: black;
+  padding: 30px 20px;
   font-family: "Lato";
   text-align: justify;
+  font-size: 20px;
   letter-spacing: 0.5px;
+  border-top: black double;
+  border-bottom: black double;
+  margin: 30px 0px;
 }
 
 .skills {
@@ -98,8 +102,8 @@ header > a > button:hover {
   font-family: "Lato";
   width: 100%;
   font-size: 15px;
-  background-color: #1e1e24ee;
-  color: aliceblue;
+  background-color: rgb(196, 206, 219);
+  color: rgb(0, 0, 0);
   text-align: left;
   padding: 15px;
   border-radius: 10px;
