--- a/cssfiles/SkillSet.css
+++ b/cssfiles/SkillSet.css
@@ -8,10 +8,7 @@
 }
 
 body {
-  background: linear-gradient(
-    rgba(110, 110, 110, 0.5),
-    rgba(192, 192, 192, 0.1)
-  );
+  background: aliceblue;
 }
 
 header {
@@ -61,6 +58,12 @@ div > div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
+  transition: 0.5s ease;
+  padding: 10px;
+}
+div > div:hover {
+  background: rgb(223, 240, 255);
 }
 
 div > div > img {
@@ -97,6 +100,11 @@ div > div > p {
   padding: 20px 0px;
 }
 
+.starrating {
+  height: 20px;
+  margin-top: 10px;
+}
+
 footer {
   height: 100px;
   background-color: #1e1e24;
@@ -122,7 +130,7 @@ footer > a > button:hover {
 }
 
 footer > h1 {
-  font-size: 15px;
+  font-size: 10px;
   text-align: center;
   color: aliceblue;
   width: 150px;
