--- a/cssfiles/HomePage.css
+++ b/cssfiles/HomePage.css
@@ -158,7 +158,7 @@ header > a > button:hover {
   color: rgb(0, 0, 0);
   text-transform: capitalize;
   transition: 0.5s ease;
-  background-color: rgb(196, 206, 219);
+  background-color: transparent;
 }
 
 button:hover {
