--- a/cssfiles/ProjectTree.css
+++ b/cssfiles/ProjectTree.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: rgb(201, 207, 212);
+  background: aliceblue;
 }
 
 header {
@@ -22,7 +22,6 @@ header > h1 {
   color: aliceblue;
   font-family: "Lato";
   font-size: 25px;
-  width: 50%;
   text-align: center;
 }
 
@@ -76,19 +75,18 @@ p {
 .button {
   font-family: "Lato";
   color: rgb(0, 0, 0);
-  font-size: 25px;
+  font-size: 20px;
   border-radius: 20px;
-  border-color: rgba(77, 77, 77, 0.5);
-  border-width: 2px;
+  border: black double;
   padding: 40px 30px;
-  background-color: rgb(155, 161, 170);
+  background-color: transparent;
   cursor: pointer;
   transition: 0.3s ease;
 }
 
 .button:hover {
-  background-color: rgba(95, 95, 95, 0.616);
-  color: black;
+  background-color: rgba(146, 146, 146, 0.616);
+  color: aliceblue;
   border-color: aqua;
 }
 
@@ -98,10 +96,9 @@ img {
 
 .banner {
   display: flex;
-  background: aliceblue;
+  background: rgb(216, 237, 255);
   border-top: rgb(0, 0, 0) double;
   border-bottom: rgb(0, 0, 0) double;
-  border-width: 7px;
   height: 150px;
   align-items: center;
   justify-content: space-evenly;
