--- a/cssfiles/Contact.css
+++ b/cssfiles/Contact.css
@@ -15,68 +15,10 @@ p {
   margin: 20px 100px;
   border-top: black double;
   border-bottom: black double;
-  padding: 30px 0;
+  border-radius: 20px;
+  padding: 30px 20px;
   font-weight: bold;
-  font-size: 20px;
-}
-
-.contact-form {
-  display: flex;
-  flex-direction: column;
-  margin: 20px 0px;
-  align-items: center;
-}
-
-.contact-form > input {
-  height: 50px;
-  width: 50%;
-  margin-top: 20px;
-  padding: 10px 0;
-  text-indent: 20px;
-  font-size: 15px;
-  border-radius: 10px;
-}
-
-.contact-form > input::placeholder {
-  font-size: 15px;
-  text-indent: 20px;
-  font-weight: bold;
-}
-
-.contact-form > textarea {
-  height: 300px;
-  width: 50%;
-  text-transform: capitalize;
-  margin-top: 20px;
-  font-size: 15px;
-  padding: 20px 0px;
-  text-indent: 20px;
-  border-radius: 10px;
-}
-
-.contact-form > textarea::placeholder {
-  font-size: 15px;
-  text-indent: 20px;
-  font-weight: bold;
-}
-
-.contact-form > button {
-  width: 50%;
-  height: 60px;
-  margin: 20px 0;
-  padding: 20px 0;
-  font-size: 15px;
-  font-weight: bold;
-  transition: 0.3s ease;
-  border-radius: 10px;
-  background-color: rgb(188, 197, 209);
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.contact-form > button:hover {
-  border-color: aqua;
-  background-color: transparent;
+  font-size: 17px;
 }
 
 header {
@@ -159,10 +101,13 @@ div > div > a > button > img {
 
 footer {
   height: 100px;
+  width: 100%;
   background-color: #1e1e24;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  position: absolute;
+  bottom: 0;
 }
 
 footer > a > button {
