--- a/cssfiles/Experience.css
+++ b/cssfiles/Experience.css
@@ -46,20 +46,20 @@ header > a > button:hover {
 }
 
 #seperator {
-  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   margin-top: 50px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
 }
 
 #seperator > h1 {
-  font-size: 30px;
+  font-size: 35px;
   border-top: black double;
   border-bottom: black double;
-  padding: 20px 0px;
+  padding: 30px 0px;
+  background-color: rgb(219, 238, 255);
 }
 
 .LargeContainer {
@@ -71,6 +71,7 @@ header > a > button:hover {
   padding: 30px;
   width: 45%;
   margin: 0 auto;
+  margin-bottom: 40px;
   margin-top: 30px;
   border-radius: 20px;
   font-size: 15px;
@@ -105,7 +106,7 @@ header > a > button:hover {
 .container {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.5s ease;
+  transition: max-height 1s ease;
 }
 
 .section {
@@ -120,7 +121,7 @@ header > a > button:hover {
   font-size: 12px;
   width: 40%;
   height: 150px;
-  background-color: rgb(209, 233, 253);
+  background-color: rgba(174, 174, 255, 0.2);
   border-radius: 20px;
   position: relative;
   font-weight: bold;
@@ -178,8 +179,8 @@ span {
   padding: 30px;
   width: 60%;
   margin: 0 auto;
+  margin-bottom: 40px;
   margin-top: 30px;
-  margin-bottom: 30px;
   border-radius: 20px;
   font-size: 15px;
   font-weight: bold;
@@ -217,8 +218,11 @@ span {
   justify-content: center;
   align-items: center;
   max-height: 0;
+  margin: 0 10%;
+  border-radius: 20px;
   overflow: hidden;
   transition: max-height 1s ease;
+  background-color: rgba(174, 174, 255, 0.2);
 }
 
 .job > img {
@@ -233,6 +237,37 @@ span {
   width: 60%;
   margin-bottom: 20px;
   font-weight: bold;
+  font-style: italic;
+}
+
+table {
+  font-weight: bold;
+  margin: 30px 0;
+}
+
+table,
+th {
+  width: 50%;
+  border: black double;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  text-align: center;
+  padding: 10px;
+}
+
+td {
+  border: black double;
+  font-style: italic;
+}
+
+.Cert {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer {
@@ -264,5 +299,188 @@ footer > a > button:hover {
 footer > h1 {
   color: aliceblue;
   font-family: "Lato";
+  font-size: 15px;
+}
+
+.certbutton {
+  padding: 30px;
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  margin-top: 30px;
+  border-radius: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  border: black double;
+  cursor: pointer;
+  transition: 0.5s ease;
+  background: transparent;
+}
+
+.certbutton:hover {
+  border: aqua double;
+}
+
+.Cert--Active {
+  background-color: #65657eee;
+  color: aliceblue;
+}
+
+.certbutton::after {
+  content: "\25be";
+  float: right;
+  transform: scale(2);
+  padding-left: 20px;
+}
+
+.Cert--Active::after {
+  content: "\25b4";
+  float: right;
+  transform: scale(2);
+}
+
+.certif {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease;
+  background-color: rgba(174, 174, 255, 0.2);
+  margin: 0 10%;
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+
+.certif > a {
+  text-align: center;
+}
+
+.certif > a > img {
+  border-radius: 20px;
+  width: 50%;
+  height: auto;
+  margin: 20px 0;
+  margin-bottom: 40px;
+}
+
+.certif > img {
+  border-radius: 20px;
+  width: 50%;
+  height: auto;
+  margin: 20px 0;
+  margin-bottom: 40px;
+}
+
+.certif > p {
+  text-align: center;
+  width: 60%;
+  font-style: italic;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.Space {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spacebutton {
+  padding: 30px;
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  margin-top: 30px;
+  border-radius: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  border: black double;
+  cursor: pointer;
+  transition: 0.5s ease;
+  background: transparent;
+  margin: auto 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.spacebutton:hover {
+  border: aqua double;
+}
+
+.Space--Active {
+  background-color: #65657eee;
+  color: aliceblue;
+}
+
+.spacebutton::after {
+  content: "\25be";
+  position: absolute;
+  right: 15px;
+  bottom: 40px;
+  transform: scale(2);
+}
+
+.Space--Active::after {
+  content: "\25b4";
+  float: right;
+  transform: scale(2);
+}
+
+.spacebutton::before {
+  content: url(/Experience/rocket.png);
+  transform: scale(0.8);
+  padding-right: 20px;
+  position: absolute;
+  left: 15px;
+  bottom: 18px;
+  transition: 1s ease;
+}
+
+.Space--Active::before {
+  content: url(/Experience/rocket.png);
+  transform: scale(1);
+  padding-left: 10px;
+  position: absolute;
+  left: 0px;
+  bottom: 160px;
+  transition: 1s ease;
+}
+
+.spaceschool {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease;
+  background-color: rgba(174, 174, 255, 0.2);
+  margin: 30px 10%;
+  margin-bottom: 20px;
+  border-radius: 20px;
+}
+
+.spaceschool > img {
+  border-radius: 20px;
+  width: 45%;
+  height: auto;
+  margin: 20px 0;
+  margin-bottom: 40px;
+}
+
+.spaceschool > p {
+  text-align: justify;
+  width: 60%;
+  font-style: italic;
+  margin-bottom: 20px;
+  font-weight: bold;
   font-size: 15px;
 }
