--- a/cssfiles/Miotag.css
+++ b/cssfiles/Miotag.css
@@ -31,7 +31,7 @@ img {
   height: 40px;
 }
 
-header > img {
+header > a > img {
   filter: invert(30%);
 }
 
@@ -72,10 +72,11 @@ header > a > button:hover {
   padding: 30px 20px;
   font-family: "Lato";
   text-align: justify;
-  font-size: 20px;
+  font-size: 15px;
   letter-spacing: 0.5px;
   border-top: black double;
   border-bottom: black double;
+  border-radius: 20px;
   margin: 30px 0px;
 }
 
@@ -103,10 +104,11 @@ header > a > button:hover {
   font-family: "Lato";
   width: 100%;
   font-size: 12px;
-  background-color: rgb(196, 206, 219);
+  background-color: rgba(196, 206, 219, 0);
   color: rgb(0, 0, 0);
   text-align: left;
-  padding: 15px;
+  border: black double;
+  padding: 20px 15px;
   border-radius: 10px;
   cursor: pointer;
 }
