--- a/cssfiles/SkillSet.css
+++ b/cssfiles/SkillSet.css
@@ -62,6 +62,7 @@ div > div {
   transition: 0.5s ease;
   padding: 10px;
 }
+
 div > div:hover {
   background: rgb(223, 240, 255);
 }
@@ -99,7 +100,8 @@ div > div > p {
   font-size: 30px;
   border-top: black double;
   border-bottom: black double;
-  padding: 20px 0px;
+  padding: 40px 0px;
+  border-radius: 10px;
 }
 
 .starrating {
@@ -131,13 +133,19 @@ footer > a > button:hover {
   border-color: aqua;
 }
 
-footer > h1 {
+footer > a > h1 {
   font-size: 10px;
   text-align: center;
   color: aliceblue;
   width: 150px;
 }
 
+footer > h1 {
+  font-size: 10px;
+  text-align: center;
+  color: aliceblue;
+  width: 150px;
+}
 span {
   font-size: 13px;
   font-style: italic;
