--- a/cssfiles/Contact.css
+++ b/cssfiles/Contact.css
@@ -12,7 +12,7 @@ body {
 
 p {
   text-align: center;
-  margin: 20px 100px;
+  margin: 20px 5%;
   border-top: black double;
   border-bottom: black double;
   border-radius: 20px;
@@ -104,10 +104,9 @@ footer {
   width: 100%;
   background-color: #1e1e24;
   display: flex;
+  margin-top: 200px;
   align-items: center;
   justify-content: space-evenly;
-  position: absolute;
-  bottom: 0;
 }
 
 footer > a > button {
